--- a/css/psnq.css
+++ b/css/psnq.css
@@ -44,7 +44,9 @@ img.logo {
     height: auto;
     float: left;
 }
-
+hr{
+    border: 2px solid black;
+}
 nav ul {
     list-style: none;
     display: flex;
@@ -66,6 +68,28 @@ nav ul li a.links {
     padding: 6px 14px;
     border-radius: 15px; /* Rounded corners */
     border: 1px solid black; /* Optional: Add a border */
+}
+.container1{
+    background-color: rgb(255,59,59);
+    padding: 15px 10px;
+    margin: 0;
+}
+.sub-text{
+    margin: auto;
+    background-color: beige;
+    box-shadow: 9px 9px black;
+    width: 30%;
+    padding: 15px;
+}
+table {
+    border-collapse: collapse; 
+    width: 100%; 
+}
+
+table td {
+    border: 1px solid black; 
+    padding: 10px;
+    text-align: center; 
 }
 
 footer {
